Change log (recent come first)

27 july 2008: Improved Save method. Compile under Windows 
  * Can define "incomplete windows": windows which throw an error
    whenever they are used. Creation of such windows, however,
    does not produce any errors: this concept is useful for the 
    new syntax of the Window.Save method;
  * Extended the syntax of the Window.Save method: it can now take
    a window and (1) complete it (if it is uncomplete) or (2) put
    the figure into it (if it is complete). In both cases the figure
    fits the destination window;
  * Created man page and Ubuntu package;
  * Ported the source to Windows: we now compile on XP and can
    distribute the first version of Box for Windows;

5 July 2008: Bugfixes in the transformation of draw styles and font

28 June 2008: Filling with linear/radial color gradients (Gradient[]) 
  * Can now express color in HSV (besides RGB) and convert RGB<-->HSV.
  * Can now fill objects using linear or radial color gradients
    (Gradient[] can be used for the purpose).
  * Color[] defines .r=.g=.b=0 and .a=1 by default. Opaque red can be
    defined with Color[.r=1]. Similar behaviour for HSV[].
    They also both accept a triple (for opaque colors) or quadruple
    of reals (for translucent colors).

21 June 2008: Style object now allow tracing borders
  * We can now draw polygons with border, controlling the join style
    (including the miter limit), the cap style, the dashes, the color.
  * Style can be instructed to draw empty polygons. In that case
    the border is not closed in Poly, unless Poly.Close[] is used.

29 May 2008: Work on the documentation and on the internal allocation system.
  * Started to write documentation on the graphic capabilities of Box.
  * Destructors are now called automatically by the VM before deallocation
    of objects: Window, PointList and Style are now fully deallocated.
  * Used Valgrind to track allocation errors: found one major problem