@@ -42,21 +42,19 @@ w = Window[][
             (x2, y1); (x3, y1); (x1, y1); (x4, y1)]
 
   // Some labels near the components
-  on_left = Point[(-8.5, -1.5)], on_right = Point[(4.0, -1.5)]
-  on_top = Point[(-3.0, 5.0)]
   \ .Text[.Font["Helvetica", 4.0],
-          "R1", r1.Get[1.5] + on_left;
-          "R2", r2.Get[1.5] + on_right;
-          "R3", r3.Get[1.5] + on_left;
-          "R4", r4.Get[1.5] + on_right;
-          "T1", t1.Get[1.5] + on_left;
-          "T2", t2.Get[1.5] + on_right;
-          "C1", c1.Get[1.5] + on_top;
-          "C2", c2.Get[1.5] + on_top]
+          "T1", t1.Get[1.5], .From[(2.1, 0.5)];
+          "R1", r1.Get[1.5];
+          "R2", r2.Get[1.5], .From[(1.9, 0.5)];
+          "T2", t2.Get[1.5], .From[(-0.9, 0.5)];
+          "R3", r3.Get[1.5];
+          "R4", r4.Get[1.5];
+          "C1", c1.Get[1.5], .From[(0.5, -1.5)];
+          "C2", c2.Get[1.5]]
 
   // Enlarge bounding box: the Show[] instruction specify some points that
   // should be visible anyway (the bounding box is enlarged accordingly)
-  \ .Show[t2.Get[1.5] + 3*on_right]
+  \ .Show[t2.Get[1.5] + (12, 0)]
 ]
 
 // Save the figure into a postscript file
