@@ -1,0 +1,7 @@
+rst_out = "cairo_gradient.txt"
+rst_skeleton = "skeleton"
+crumb = "cairo_gradient.box"
+description = "Linear and radial gradients"
+figure_caption = "the output produced by Box"
+box_source = "../../../box/examples/cairo_gradient.box"
+out_png = "cairo_gradient.png"
