@@ -1,0 +1,9 @@
+rst_out = "cairo_set_line_cap.txt"
+rst_skeleton = "skeleton"
+crumb = "cairo_set_line_cap.box"
+description = "Caps available when drawing border lines"
+figure_caption = ("this sample shows the available cap styles "
+                 "which can be selected when drawing border lines")
+box_source = "../../../box/examples/cairo_set_line_cap.box"
+out_png = "cairo_set_line_cap.png"
+
