@@ -11,7 +11,6 @@ restindex
 
 <p>Here we collect some figures together with their Box source files.</p>
 
-<p>Take a look at the examples by clicking on the menu on the left
-of the page.</p>
+<p>Click over a picture to see the corresponding Box source code.</p>
 
 $thumbnails_table$
