@@ -1,0 +1,9 @@
+rst_out = "text.txt"
+rst_skeleton = "skeleton"
+crumb = "text.box"
+description = "Example of text formatting"
+figure_caption = "most of the formatting capabilities of Window.Text"
+box_source = "../../../box/examples/text.box"
+out_eps = "text.eps"
+convert_opts = "-density 80 -antialias -size 100"
+
