@@ -1,5 +1,16 @@
 Change log (recent come first)
 
+09 august 2008: Improved text formatting
+  * Removed a small horrible bug in the selection of font:
+    this was leading to crashes whenever a known postscript font
+    was selected on Cairo terminals;
+  * Introduced Window.Text.From to decide what corner of the text 
+    should go in the provided point: useful for centering text;
+  * Can now handle quite complex text formatting: subscripts,
+    superscripts and newlines are rendered correctly both in native
+    EPS and Cairo terminals.
+  * Bugfix: native EPS can now show text containing parenthesis.
+
 27 july 2008: Improved Save method. Compile under Windows 
   * Can define "incomplete windows": windows which throw an error
     whenever they are used. Creation of such windows, however,
